# hyponome

./: .clang-format  .gitignore  .gitmodules  .scalafmt  .scalafmt.conf  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sbt  common.nix  default.nix  hyponome.conf  release.nix  shell.nix
core/src/main/resources/: application.conf  logback.xml
core/src/main/scala/hyponome/: Add.scala  AddResponse.scala  File.scala  LocalStore.scala  LocalStoreContext.scala  LocalStoreM.scala  Remove.scala  RemoveResponse.scala  SHA256Hash.scala  Store.scala  StoreF.scala  StoreM.scala  Types.scala  package.scala
core/src/main/scala/hyponome/db/: FileDB.scala  SQLFileDB.scala
core/src/main/scala/hyponome/db/event/: Event.scala  Operation.scala
core/src/main/scala/hyponome/db/query/: StoreQuery.scala  StoreQueryResponse.scala
core/src/main/scala/hyponome/db/tables/: Events.scala  Files.scala  Tables.scala
core/src/main/scala/hyponome/event/: Operation.scala
core/src/main/scala/hyponome/file/: FileStore.scala  LocalFileStore.scala
core/src/main/scala/hyponome/query/: StoreQuery.scala  StoreQueryResponse.scala
core/src/main/scala/hyponome/util/: TaskHelpers.scala  package.scala
core/src/test/scala/hyponome/: FileStoreTest.scala
core/src/test/scala/hyponome/db/: HyponomeDBSpec.scala  SQLFileDBSpec.scala  SQLFileDBTest.scala
core/src/test/scala/hyponome/file/: LocalFileStoreSpec.scala  LocalFileStoreTests.scala
core/src/test/scala/hyponome/test/: Data.scala  Generators.scala  TestData.scala  package.scala
daemon/src/it/scala/daemon/util/: UtilTest.scala
daemon/src/main/scala/hyponome/daemon/stream/: package.scala
daemon/src/main/scala/hyponome/daemon/util/: package.scala
daemon/src/test/scala/hyponome/daemon/: StreamTest.scala
doc/: Design.md  Doxyfile.in  Plans.md
http/src/main/scala/hyponome/http/: JsonProtocol.scala  Main.scala  Service.scala
http/src/main/scala/hyponome/http/config/: ServiceConfig.scala  package.scala
http/src/test/scala/hyponome/http/: Main.scala  ServiceSpec.scala  package.scala
include/: hash.h  hyponome.h  rpc.h  util.h
include/hyponome/: hash.h  rpc.h  util.h
json/src/main/scala/hyponome/json/: auto.scala  package.scala
json/src/test/scala/hyponome/json/: JsonTests.scala
lib/: CMakeLists.txt  hash.cpp  rpc.cpp  util.cpp
lib/hyponome/: CMakeLists.txt  hash.cpp  rpc.cpp  util.cpp
project/: Dependencies.scala  plugins.sbt
protobuf/src/test/scala/hyponome/protobuf/: FileProtoTest.scala
src/main/resources/: application.conf  logback.xml
src/main/scala/hyponome/: Add.scala  AddResponse.scala  AddStatus.scala  Added.scala  DBActor.scala  DBQuery.scala  DBQueryResponse.scala  Delete.scala  DeleteResponse.scala  DeleteStatus.scala  Event.scala  HyponomeDB.scala  LocalStore.scala  Main.scala  Operation.scala  Store.scala  StoreQuery.scala  StoreQueryResponse.scala  Tables.scala  Types.scala  core.scala  util.scala
src/main/scala/hyponome/actor/: AskActor.scala  Controller.scala  DBActor.scala  FileActor.scala  Receptionist.scala
src/main/scala/hyponome/config/: ServiceConfig.scala  package.scala
src/main/scala/hyponome/core/: JsonProtocol.scala  package.scala
src/main/scala/hyponome/db/: HyponomeDB.scala  Tables.scala
src/main/scala/hyponome/db/tables/: Tables.scala
src/main/scala/hyponome/event/: AddStatus.scala  DeleteStatus.scala  Event.scala  RemoveStatus.scala
src/main/scala/hyponome/file/: FileStore.scala  HyponomeFile.scala  LocalFileStore.scala
src/main/scala/hyponome/http/: HttpMain.scala  HttpService.scala  JsonProtocol.scala  Main.scala  Marshallers.scala  Service.scala
src/test/scala/: DBActorSpec.scala  HyponomeDBSpec.scala
src/test/scala/actor/: AskActorSpec.scala  DBActorSpec.scala  FileActorSpec.scala
src/test/scala/db/: HyponomeDBSpec.scala
src/test/scala/file/: HyponomeFileSpec.scala
src/test/scala/hyponome/actor/: AskActorSpec.scala  DBActorSpec.scala  FileActorSpec.scala
src/test/scala/hyponome/db/: HyponomeDBSpec.scala
src/test/scala/hyponome/file/: HyponomeFileSpec.scala  LocalFileStoreSpec.scala  package.scala
src/test/scala/hyponome/http/: HttpServiceSpec.scala  Main.scala  ServiceSpec.scala
src/test/scala/hyponome/test/: package.scala
tests/: CMakeLists.txt  hash_tests.cpp  rpc_tests.cpp  tests_hash.cpp  tests_rpc.cpp
